2014-3-15 Joe Jevnik <joejev@gmail.com>
	* src/controls/keybinds-parser.scm: Added a gen-op macro that will let
	me more quickly add operations in the future, while assuring they are
	correct. Also made all-buttons? and all-axis? check for length to
	simplify the macro. Thanks to Jack Pugmire for the scheme help.

2014-3-18 Joe Jevnik <joejev@gmail.com>
	* src/controls/keybinds.c: Shortened the call to read_jsevent by
	unioning the axis name with an array of axes where the name and number
	relate.
	* src/common.h, src/controls/keybinds.h: Moved the definiton of
	rov_jsaxis and rov_joystick to common, and added the union as described.
	Also made rov_arduino contain an rov_keybinds structure.
	* src/ui/keyboard.h, src/ui/keyboard.c: Added these to handle keyboard
	interaction with the ROV program. Currently support 'l': reload the
	.keybinds file at runtime.
	* TODO: Updated TODO.

2014-3-22 Joe Jevnik <joejev@gmail.com>
	* lib/*: Moved screen and library functions into their own libraries to
	be linked with the main project.
	* src/ui/main: Made the changes for the libraries.
	* src/ui/controls.c: Removed all library functions.
	* src/common.h: Removed the structures defined by my new libraries.
	* src/CMakeLists.txt: Added the static linking of the 2 libraries.
	* src/librov/*: Added headers for librov.

2014-4-21 Joe Jevnik <joejev@gmail.com>
	* src/controls/pinlayout.h, src/controls/pinlayout.c: Added a
	configurable pin layout parsing mechanism.
	* src/ui/main.c: Added the sections to read from the .pins file.
	* src/controls/controls.c: Started sending the proper signals to the
	arduino.

2014-4-21 Joe Jevnik <joejev@gmail.com>
	* src/ui/keyboard.h, src/ui/keyboard.c: Added a feature to load the
	pin layout at runtime.
	* src/comm/opcode.h: Added the pinstate opcode.
	* src/comm/comm.h, src/comm/comm.c: Added the set_pinstate() functions
	to set a pin to input or output.
	* src/arduino.c: Added src/arduino.c