@@ -5,7 +5,6 @@ set(MATEROV_FILES comm/comm.c
                   controls/keybinds.c
                   controls/controls.c
                   controls/pinlayout.c
-                  motor/motor.c
                   ui/keyboard.c
                   ui/main.c)
 
